--- a/메인화면-내가쓴글조회목록.html
+++ b/메인화면-내가쓴글조회목록.html
@@ -10,8 +10,10 @@
     * {
         margin: 5px;
     }
-    a{
-        text-decoration-line:none; color: black;
+
+    a {
+        text-decoration-line: none;
+        color: black;
     }
 
     body {
@@ -22,17 +24,27 @@
     body>a>h1 {
         /*게시판*/
         height: 50px;
-        border: 1px solid black;
+        /* border: 1px solid black; */
         text-align: center;
         line-height: 50px;
         font-size: 2.5rem;
         padding: 10px;
-        background-color: lightgray;
+        margin-bottom: 50px;
+        /* background-color: lightgray; */
+    }
+
+    .subtitle {
+        /*내가 쓴 글*/
+        /* border:1px solid; */
+        margin-bottom: 20px;
+        margin-left: 20px;
+        font-size: 1.5rem;
+
     }
 
     body>section {
-        height: 700px;
-        border: 1px solid;
+        height: auto;
+        /* border: 1px solid; */
     }
 
     body>section>thead {
@@ -45,48 +57,75 @@
     body>.back {
         /*뒤로가기 버튼*/
         width: 80px;
-        height:50px
+        height: 50px
     }
-    body>section>table{
+
+    .back:hover {
+        cursor: pointer;
+    }
+
+    body>section>table {
         border-collapse: collapse;
         border-spacing: 0;
         margin-left: auto;
-      margin-right: auto;
+        margin-right: auto;
     }
-    section>table>thead>tr{
-        background-color: lightgrey;
+
+    section>table>thead>tr {
+        /* background-color: lightgrey; */
 
     }
-    section>table>thead>tr>th{
-        height:37px;
-        border:1px solid;
-        vertical-align: middle;
+
+    section>table>tbody>tr:hover {
+        cursor: pointer;
+    }
+
+
+    section>table>thead>tr>th {
+        height: 50px;
+        /* border:1px solid; */
         text-align: center;
+
     }
-    section>table>tbody>tr{
-    }
-    section>table>tbody>tr>td{
-        height:25px;
+
+    section>table>tbody>tr {}
+
+    section>table>tbody>tr>td {
+        height: 25px;
         text-align: center;
-        border:1px solid;
+        border: 1px solid;
     }
-</style>
+    </style>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const tableHead = document.querySelector('section table tbody');
+            tableHead.addEventListener('click', function () {
+                window.location.href = '내가쓴글조회목록-내가쓴글.html';
+            });
+        });
+    </script>
 
 <body>
-    <a href="메인화면.html"><h1>나의 게시물</h1></a>
-
+    <a href="index.html">
+        <h1>"이름을 뭘로하지" 게시판</h1>
+    </a>
+    <div class="subtitle">
+        <h4>내가 쓴 글</h4>
+    </div>
     <section>
         <table>
             <!-- <caption>내가 쓴 글 목록</caption> -->
             <colgroup>
                 <col style="width:3%">
-                <col style="width:45%">
-                <col style="width:7%">
+                <col style="width:40%">
+                <col style="width:15%">
                 <col style="width:10%">
                 <col style="width:5%">
             </colgroup>
+                
             <thead>
-                <tr>
+<tr>
                     <th>No</th>
                     <th>제목</th>
                     <th>글쓴이</th>
@@ -105,7 +144,7 @@
             </tbody>
         </table>
     </section>
-    <a href="메인화면.html"><button class="back">뒤로가기</button></a>
+    <a href="index.html"><button class="back">뒤로가기</button></a>
 </body>
 
 </html>
