--- a/메인화면-회원가입.html
+++ b/메인화면-회원가입.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>join</title>
+    <link rel="stylesheet" href="css/메인화면-회원가입.css">
 </head>
+
 <body>
-     ID 입력칸
-     PW 입력칸     
-     취소 버튼
-     가입 버튼
+    <div class="join">JOIN</div>
+    <div class="box">
+        <input id="id" type="email" placeholder="ID" />
+        <input id="pw" type="password" placeholder="PW" />
+        <a href="index.html"><button>가입하기</button></a>
+    </div>
 </body>
+
 </html>
